# charlie_delta

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bit_flip_code_tutorial.ipynb  bug_report.ipynb  example.py  mkdocs.yml  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: publish-release.yml  quality.yml  release-drafter.yml  tests.yml  version-bump.yml
data/: README.md
docs/: index.md  logging.md
docs/batistatemplate/: hello.md  tests.md  workflows.md
docs/stylesheets/: extra.css
scripts/: README.md  example-use.py
src/: bit_flip_code_tutorial.ipynb  bit_flip_correction.py  bit_flip_correction_closest_neighbor.py  helper.py  qasm2_reserved.py
src/.ipynb_checkpoints/: bit_flip_code_tutorial-checkpoint.ipynb
src/batistatemplate/: __init__.py  hello.py
src/batistatemplate/typing/: examples.py
src/batistatemplate/utils/: io.py  logging_config.py
tests/: test_example.py
